# ai-disk-cleanup

./: ..\..\windows\system32\config\sam  ..\..\windows\system32\config\sam.checksum  .gitignore  AI_ACCURACY_VALIDATION_REPORT.md  AI_RESILIENCE_IMPLEMENTATION_SUMMARY.md  C:\Windows\System32\config\SAM  C:\Windows\System32\config\SAM.checksum  CHANGELOG.md  CONFIG_SYSTEM.md  CONTRIBUTING.md  CROSS_PLATFORM_VERIFICATION_REPORT.md  CROSS_PLATFORM_VERIFICATION_SUMMARY.md  OPENAI_TEST_SUMMARY.md  PERFORMANCE_TESTING_SUMMARY.md  README.md  SECURITY_FIXES_SUMMARY.md  SECURITY_IMPLEMENTATION_SUMMARY.md  TEST_COVERAGE_SUMMARY.md  TEST_EXECUTION_SUMMARY.md  TEST_SUMMARY.md  audit_trail.json  demonstrate_accuracy_system.py  example_config_usage.py  main.py  pyproject.toml  run_performance_tests.py  run_tests.py  safety_layer_config.json  test_accuracy_system.py  validate_ai_accuracy.py
docs/: CACHING.md
docs/interfaces/: openai-api-interface.md
docs/patterns/: ai-file-analysis-patterns.md
docs/performance/: performance-strategy-specification.md
examples/: cache_demo.py
reports/: demo_report_20251004_023307_demo.json
scripts/: clean.sh  clean_project.py
src/ai_disk_cleanup/: __init__.py  ai_analyzer.py  audit_trail.py  cache_manager.py  fallback_analyzer.py  file_scanner.py  openai_client.py  path_security.py  safety_layer.py  types.py
src/installer/: __init__.py  cli.py  config.py  orchestrator.py
src/web-ui/: .env.example  .prettierignore  .prettierrc  README.md  components.json  eslint.config.js  jest.config.js  package.json  package.json.template  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
src/web-ui/src-tauri/: Cargo.toml  tauri.conf.json
src/web-ui/src-tauri/src/: app_state.rs  lib.rs  main.rs
src/web-ui/src-tauri/src/commands/: file_system.rs  mod.rs  notifications.rs  security.rs  system_integration.rs
src/web-ui/src-tauri/src/utils/: config.rs  logging.rs  mod.rs  platform.rs  security.rs
tests/: PLATFORM_ADAPTER_TEST_COVERAGE.md  __init__.py  test_ai_accuracy_validation.py  test_config_manager.py  test_config_models.py  test_credential_store.py  test_credential_store_security.py  test_cross_platform_file_security.py  test_cross_platform_verification.py  test_input_sanitization.py  test_integration.py  test_integration_secure_operations.py  test_secure_file_operations.py  test_security_integration.py  test_security_vulnerability_fixes.py
tests/installers/: __init__.py
(+95 files in other folders)
